removed /books/new endpoint and handled querying in /books
